TOBAGO-1578: tc:sheet behavior of showHeader and columns are different to Tobago2 tc:sheet behavior of showHeader and columns are different to Tobago2 * deprecated attribute "forceVerticalScrollBar" removed * bugfix: <tc:style maxHeight> and <tc:style height> can now used in <tc:sheet> without shrinking the header. * bugfix: if no horizontal scrollbar is shown, the position of the bar is set to 0 * columns of header and body are now among each other if the scroll bar is on the right * resizing now work with <tc:columnEvent> * width of body columns is now updated instant while resizing [developed by hnoeth]

--- a/tobago-theme/tobago-theme-standard/src/main/resources/org/apache/myfaces/tobago/renderkit/html/standard/standard/style/tobago.css
+++ b/tobago-theme/tobago-theme-standard/src/main/resources/org/apache/myfaces/tobago/renderkit/html/standard/standard/style/tobago.css
@@ -579,6 +579,11 @@ p.tobago-separator:after {
 
 /* sheet -------------------------------------------------------------- */
 
+.tobago-sheet-header {
+  overflow: hidden;
+  flex-shrink: 0;
+}
+
 .tobago-sheet {
   display: flex;
   flex-direction: column;
@@ -594,6 +599,10 @@ p.tobago-separator:after {
 
 .tobago-sheet-cell-markup-justify {
   text-align: justify;
+}
+
+.tobago-sheet-cell-markup-filler {
+  padding: 0 !important; /* fix for IE 11 */
 }
 
 .tobago-sheet-footer {
@@ -632,6 +641,10 @@ p.tobago-separator:after {
 
 .tableLayout-fixed {
   table-layout: fixed;
+}
+
+.tobago-sheet-headerCell-markup-filler {
+  border-width: 0 !important;
 }
 
 .tobago-sheet-headerCell {
